--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <head><title>David Schapiro Homepage</title></head>
 <body>
-    <h1>David Schapiro</h1>
+    <h1>David Schapiro liebt Miriam Kohl</h1>
 </body>
