--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,34 @@
-<!DOCTYPE html>
-<head><title>David Schapiro Homepage</title></head>
-<body>
-    <h1>David Schapiro liebt Miriam Kohl</h1>
-</body>
+<!doctype html>
+
+<html>
+    <head>
+        <meta charset="utf-8">
+
+        <title>Blank template</title>
+
+        <!-- Load external CSS styles -->
+        <link rel="stylesheet" href="styles.css">
+
+    </head>
+
+    <body>
+        <img src="profile.jpg" alt="Avatar" class="center">
+
+        <h1 class="center">Welcome!</h1>
+        
+        <!-- Load external JavaScript -->
+        <script src="scripts.js"></script>
+        
+        <p class="center">
+            My name is David! I am a Jewish youth 
+            and young-adult educator and Masorti rabbinical student
+            at the Frankel-College in Potsdam. My passion lies
+            in everything and anything Jewish. I prepare Bney Mitzwahs
+            to chant Torah on their big day; I make Hebrew caligraphy art
+            and can check Mezuzahs; I regularly chant from the Torah myself
+            on Shabbat and Holidays as well as lead prayer services in
+            various synagogues around Berlin.
+        </p>
+    </body>
+
+</html>
