delete class in img in index

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <img src="profile.jpg" alt="Avatar" class="center">
+        <img src="profile.jpg" alt="Avatar">
 
         <h1 class="center">Welcome!</h1>
         
