--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         </p>
 
         <boxes>
-            <a class="box" href="https://david.schapiro.org/">
+            <a class="box" href="http://david.schapiro.org/">
               <div>
                 <h2>My Blog "Tefilat haDerech"</h2>
               </div>
